--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,31 @@ a:hover {
   color: #fff;
   font-weight: bold;
 }
+
+.my-rockets {
+  margin: 50px;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  width: 500px;
+}
+
+.rocket-list {
+  border: 1px solid #aaa;
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+  padding-top: 25px;
+}
+
+.rocket-item {
+  font-weight: bold;
+  border-bottom: 1px solid #aaa;
+  padding-bottom: 25px;
+  padding-left: 25px;
+}
+
+.rocket-item:last-child {
+  border: none;
+}
