--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,16 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+html {
+  font-size: 62.5%;
+  font-family: Montserrat, sans-serif;
+}
+
+body {
+  height: 100vh;
+  overflow-x: hidden;
 }
